backend/deploy/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynaplan-api
  labels:
    app: dynaplan-api
spec:
  type: ClusterIP
  selector:
    app: dynaplan-api
  sessionAffinity: ClientIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
