backend/deploy/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynaplan-redis
  labels:
    app: dynaplan-redis
spec:
  type: ClusterIP
  selector:
    app: dynaplan-redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
